[tool.poetry]
name = "telegram_bot"
version = "0.1.1"
description = ""
authors = ["Mykhailo Hurskyi <gursky.michael1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^20.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"